# snsu-tracker

./: .cursorignore  .gitignore  DEV-PLAN.md  PROJECT-DEF.md  README.md  START-UP-INSTRUCTIONS.md  package-lock.json  package.json  start-dev.bat
backend/: API_DOCUMENTATION.md  api.py  call.py  clear_database.py  database.py  main.py  pyproject.toml
backend/api/: checklist_completions_api.py  checklist_items_api.py  checklist_templates_api.py  communication_notes_api.py  line_groups_api.py  lines_api.py  process_steps_api.py  runs_api.py  step_executions_api.py  sub_task_executions_api.py  sub_tasks_api.py  user_api.py
backend/api_routers/: checklist_completions_api.py  checklist_items_api.py  checklist_templates_api.py  communication_notes_api.py  process_steps_api.py  runs_api.py  user_api.py
backend/database/: checklist_completion_repository.py  checklist_item_repository.py  checklist_template_repository.py  communication_note_repository.py  connection.py  line_group_repository.py  line_repository.py  process_step_repository.py  run_repository.py  step_execution_repository.py  sub_task_execution_repository.py  sub_task_repository.py  user_repository.py
backend/tests/: test_api_users.py  test_database.py  test_line_repository.py  test_process_step_repository.py  test_user_repository.py
backend/tests/api/: test_api_users.py
backend/tests/database/: test_checklist_completion_repository.py  test_checklist_item_repository.py  test_checklist_template_repository.py  test_communication_note_repository.py  test_connection.py  test_line_group_repository.py  (+5 more)
(+18 files in other folders)
